refactor(msp): uniform ChartContainer style

--- a/shell/app/modules/msp/monitor/browser-insight/pages/summary/summary.scss
+++ b/shell/app/modules/msp/monitor/browser-insight/pages/summary/summary.scss
@@ -32,6 +32,11 @@
       border-radius: 0;
     }
   }
+
+  .bg-transparent .ec-card-container {
+    background-color: transparent;
+    box-shadow: none;
+  }
 }
 
 .sort-panel {
