--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -107,3 +107,12 @@ $color-options: #00b5d1;
 $color-head: #17bc65;
 
 $terminal-bgcolor: #48515f;
+
+// Color new Table
+$color-table-color: #837d90;
+$color-table-text-highlight: #7c53db;
+$color-table-bg-hover: #f7f7f8;
+$color-table-head-bg: #fbfbfb;
+
+// Color Filter
+$color-input-bg: #efeef0;
