refactor(common): table optimization

--- a/shell/app/modules/application/pages/settings/app-settings.scss
+++ b/shell/app/modules/application/pages/settings/app-settings.scss
@@ -43,3 +43,14 @@
     }
   }
 }
+
+.member-table-top-content {
+  .title {
+    line-height: 48px;
+    font-size: 18px;
+  }
+
+  .desc {
+    color: $color-dark-4;
+  }
+}
