--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -116,3 +116,7 @@ $color-table-head-bg: #fbfbfb;
 
 // Color Filter
 $color-input-bg: #efeef0;
+
+// Color Boot prompt
+$color-prompt-bg: #dcdbde;
+$color-prompt-text: #302647;
