fix: fix resource rank icon style

--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -113,6 +113,7 @@ $color-table-color: #837d90;
 $color-table-text-highlight: #7c53db;
 $color-table-bg-hover: #f7f7f8;
 $color-table-head-bg: #fbfbfb;
+$color-bg-gray: #efeef0;
 
 // Color Filter
 $color-input-bg: #efeef0;
