fix(common): org center style optimization

--- a/shell/app/layout/pages/page-container/components/sub-sidebar.scss
+++ b/shell/app/layout/pages/page-container/components/sub-sidebar.scss
@@ -178,3 +178,13 @@
     }
   }
 }
+
+.ant-menu.ant-menu-submenu-popup {
+  .fold-icon {
+    display: inline-block;
+  }
+
+  .fold-title {
+    display: none !important;
+  }
+}
