--- a/shell/app/modules/org/common/card/index.scss
+++ b/shell/app/modules/org/common/card/index.scss
@@ -1,5 +1,6 @@
 .erda-card {
   .erda-card-header {
+    line-height: 1;
     font-weight: bold;
     background-color: $color-table-head-bg;
   }
@@ -27,10 +28,10 @@
       padding: 1.5rem;
       margin: 0.5rem 0;
       background-color: $color-table-bg-hover;
+    }
 
-      .erda-panel {
-        margin-bottom: 0;
-      }
+    .erda-panel {
+      margin-bottom: 0;
     }
   }
 }
