fix: add batch operates icon

--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -190,6 +190,10 @@
   .ant-table-expanded-row-fixed {
     width: auto !important;
   }
+
+  .ant-progress-circle-path {
+    transition: all 0.8s !important;
+  }
 }
 
 .erda-table-filter {
