--- a/shell/app/layout/common/error-page.scss
+++ b/shell/app/layout/common/error-page.scss
@@ -12,8 +12,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      align-items: center;
-      height: 100px;
+      min-height: 100px;
       font-size: 30px;
       line-height: 30px;
     }
