--- a/shell/app/views/index.ejs
+++ b/shell/app/views/index.ejs
@@ -32,7 +32,28 @@
   </div>
 
   <script id='init-script'>
-    <%= htmlWebpackPlugin.options.initJs %>
+    fetch('/api/-/users/me').then(userRes => {
+      var result = userRes.json();
+      if (userRes.status >= 500) {
+        document.querySelector('.main-holder').innerText = "服务暂时不可用";
+        return;
+      }
+      if (userRes.status === 401) {
+        fetch('/api/-/openapi/login').then((loginRes) => {
+          const data = loginRes.json();
+          if (data && data.url) {
+            window.location.href = data.url;
+          }
+        });
+      } else {
+        const userData = result && result.data || {};
+        if (typeof window.userCb === 'function') {
+          window.userCb(userData);
+        } else {
+          window._userData = userData;
+        }
+      }
+    })
   </script>
   <!-- dice -->
   <script src="//at.alicdn.com/t/font_500774_kzpe8fzg3t.js" async></script>
