fix: delete useless

--- a/shell/app/config-page/components/table/table.scss
+++ b/shell/app/config-page/components/table/table.scss
@@ -301,6 +301,11 @@
   }
 }
 
+.dice-cp-table-head-icon {
+  width: 28px;
+  height: 28px;
+}
+
 .dice-cp-table-bg-progress {
   position: absolute;
   top: 0;
