fix(dop): repo branch select style adjust

--- a/shell/app/modules/application/pages/repo/components/branch-select.scss
+++ b/shell/app/modules/application/pages/repo/components/branch-select.scss
@@ -55,6 +55,7 @@
     position: relative;
     height: 34px;
     padding-left: 30px;
+    padding-right: 10px;
     line-height: 34px;
     border-radius: 2px;
     cursor: pointer;
