--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -121,3 +121,15 @@ $color-input-bg: #efeef0;
 // Color Boot prompt
 $color-prompt-bg: #dcdbde;
 $color-prompt-text: #302647;
+
+// function color
+$color-action: #1890ff;
+$color-action-bg: rgba($color-action, 0.1);
+$color-error: #d84b65;
+$color-error-bg: rgba($color-error, 0.1);
+$color-waring: #e0a716;
+$color-waring-bg: rgba($color-waring, 0.1);
+$color-success: #27c99a;
+$color-success-bg: rgba($color-success, 0.1);
+$color-default: #302647;
+$color-default-bg: rgba($color-default, 0.1);
