--- a/shell/app/common/components/badge/index.scss
+++ b/shell/app/common/components/badge/index.scss
@@ -9,13 +9,25 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 1px solid;
+    border: 2px solid;
     border-radius: 50%;
   }
 
   &.badge-breathing {
     .erda-badge-status-breath {
-      animation: antStatusProcessing 1.2s infinite ease-in-out;
+      animation: erdaStatusProcessing 1.2s infinite ease-in-out;
+    }
+  }
+
+  &.badge-breathing-2 {
+    .erda-badge-status-breath {
+      animation-delay: 0.4s;
+    }
+  }
+
+  &.badge-breathing-3 {
+    .erda-badge-status-breath {
+      animation-delay: 0.8s;
     }
   }
 
@@ -79,10 +91,10 @@
     }
   }
 
-  @keyframes statusBreathing {
+  @keyframes erdaStatusProcessing {
     0% {
       transform: scale(0.8);
-      opacity: 0.5;
+      opacity: 0.8;
     }
 
     to {
