--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -477,6 +477,9 @@ body {
     .ant-tooltip-inner {
       background-color: #fff;
       color: rgba(0, 0, 0, 0.6);
+      max-height: 90vh;
+      min-width: 300px;
+      overflow: auto;
     }
 
     .ant-tooltip-arrow {
