fix: fix tooltip max width

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -478,7 +478,7 @@ body {
       background-color: #fff;
       color: rgba(0, 0, 0, 0.6);
       max-height: 90vh;
-      min-width: 300px;
+      max-width: 600px;
       overflow: auto;
     }
 
