--- a/shell/app/common/components/list/index.scss
+++ b/shell/app/common/components/list/index.scss
@@ -1,6 +1,5 @@
 .erda-list {
   &-item {
-    display: flex;
     margin-top: 0.5rem;
     border-bottom: 1px solid $color-border;
     border-radius: 2px;
@@ -18,10 +17,6 @@
       display: flex;
       align-items: start;
       cursor: default;
-    }
-
-    &:hover {
-      background-color: $color-active-bg;
     }
 
     &:last-child {
@@ -100,7 +95,6 @@
     }
 
     .body-title {
-      margin-bottom: 4px;
       font-size: 20px;
       line-height: 32px;
     }
@@ -112,14 +106,15 @@
     }
 
     .body-extra-info {
-      margin-top: 12px;
+      margin-top: 4px;
+      line-height: 1;
     }
 
-    &.middle {
+    &.middle &-container {
       padding: 8px 12px;
     }
 
-    &.small {
+    &.small &-container {
       padding: 4px 8px;
 
       .body-title {
@@ -148,7 +143,7 @@
       }
     }
 
-    &.large {
+    &.large &-container {
       padding: 12px 16px;
     }
   }
