refactor(common): list optimization

--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -127,7 +127,7 @@ $color-action: #1890ff;
 $color-action-bg: rgba($color-action, 0.1);
 $color-error: #d84b65;
 $color-error-bg: rgba($color-error, 0.1);
-$color-waring: #e0a716;
+$color-waring: #f4b518;
 $color-waring-bg: rgba($color-waring, 0.1);
 $color-success: #27c99a;
 $color-success-bg: rgba($color-success, 0.1);
