refactor(common): leave list style unchanged except for clusters list

--- a/shell/app/common/components/list/index.scss
+++ b/shell/app/common/components/list/index.scss
@@ -4,7 +4,7 @@
     border-bottom: 1px solid $color-border;
     border-radius: 2px;
     background-color: $white;
-    box-shadow: 0 2px 4px 0 $color-text-sub;
+    box-shadow: 0 2px 4px 0 $color-box-shadow;
     background-position: 100% 0;
     background-size: auto 70%;
     background-repeat: no-repeat;
