--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -133,3 +133,6 @@ $color-success: #27c99a;
 $color-success-bg: rgba($color-success, 0.1);
 $color-default: #302647;
 $color-default-bg: rgba($color-default, 0.1);
+
+// color new list
+$color-box-shadow: rgba($color-text-sub, 0.1);
