--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -136,3 +136,5 @@ $color-default-bg: rgba($color-default, 0.1);
 
 // color new list
 $color-box-shadow: rgba($color-text-sub, 0.1);
+$color-card-shadow: rgba(85, 77, 104, 0.08);
+$color-card-hover-shadow: rgba(85, 77, 104, 0.16);
