fix(common): list and table style optimization

--- a/shell/app/common/components/boot-prompt/index.scss
+++ b/shell/app/common/components/boot-prompt/index.scss
@@ -1,5 +1,5 @@
 .erda-boot-prompt {
-  color: $color-prompt-text;
+  color: $color-default;
   background-color: $color-prompt-bg;
   border-radius: 2px;
 }
