fix(msp): fix style

--- a/shell/app/styles/util.scss
+++ b/shell/app/styles/util.scss
@@ -341,3 +341,11 @@
 .break-word {
   word-break: break-word;
 }
+
+.card-shadow {
+  box-shadow: 0 2px 4px 0 $color-card-shadow;
+
+  &:hover {
+    box-shadow: 0 2px 4px 0 $color-card-hover-shadow;
+  }
+}
