feat: fix msp home page style (#2118)
* feat: fix msp home page style

* fix(msp): page title

* fix(msp): fix style

--- a/shell/app/modules/msp/pages/micro-service/overview.scss
+++ b/shell/app/modules/msp/pages/micro-service/overview.scss
@@ -2,5 +2,16 @@
   &-header {
     height: 200px;
     background-size: 100% auto;
+    background-repeat: no-repeat;
+  }
+
+  .project-item {
+    .desc {
+      color: rgba($color-default, 0.6);
+    }
+
+    .count {
+      font-family: DINAlternate-Bold, serif;
+    }
   }
 }
