--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -135,3 +135,5 @@ $color-prompt-bg: rgba($color-default, 0.04);
 
 // color new list
 $color-box-shadow: rgba($color-text-sub, 0.1);
+$color-card-shadow: rgba(85, 77, 104, 0.08);
+$color-card-hover-shadow: rgba(85, 77, 104, 0.16);
