--- a/shell/app/styles/app.scss
+++ b/shell/app/styles/app.scss
@@ -62,7 +62,7 @@ html body {
 }
 
 html body[lang='en'] {
-  font-family: -apple-system, DINAlternate-Bold BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+  font-family: -apple-system, DINAlternate-Bold, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
