fix: warning by eslint

--- a/shell/app/common/components/list/index.scss
+++ b/shell/app/common/components/list/index.scss
@@ -14,7 +14,7 @@
 
     &-operations {
       display: flex;
-      align-items: start;
+      align-items: flex-start;
       cursor: default;
     }
 
