--- a/shell/app/styles/app.scss
+++ b/shell/app/styles/app.scss
@@ -56,14 +56,13 @@ ol {
 html body {
   color: $color-text;
   font-size: 14px;
-  font-family: DINAlternate-Bold, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue',
-    Arial, sans-serif;
+  font-family: 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Arial, sans-serif;
   line-height: 18px;
 }
 
 html body[lang='en'] {
-  font-family: -apple-system, DINAlternate-Bold, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 h1,
