feat:  iconpark official icon migration

--- a/shell/app/config-page/components/file-tree/file-tree.scss
+++ b/shell/app/config-page/components/file-tree/file-tree.scss
@@ -5,7 +5,7 @@
     .tree-node-action {
       position: absolute;
       right: 5px;
-      top: calc(50% - 8px);
+      top: 4px;
       display: none;
     }
 
