fix: add gantt tree

--- a/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
@@ -1,15 +1,31 @@
 .erda-gantt-bar-wrapper {
   cursor: pointer;
   outline: none;
+  &:hover {
+    .erda-gantt-bar-handle {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
 }
 
-.erda-gantt-bar-wrapper:hover .erda-gantt-bar-handle {
-  visibility: visible;
-  opacity: 1;
+.erda-gantt-bar-icon-wrapper {
+  &.right {
+    text-align: right;
+  }
+
+  &:hover {
+    .erda-gantt-bar-handle-icon {
+      visibility: visible;
+    }
+  }
+}
+.erda-gantt-bar-handle-icon {
+  visibility: hidden;
 }
 
 .erda-gantt-bar-handle {
-  fill: #ddd;
+  fill: transparent;
   cursor: ew-resize;
   opacity: 0;
   visibility: hidden;
