--- a/shell/app/config-page/components/gantt/components/task-item/task-list.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/task-list.scss
@@ -21,3 +21,13 @@
   user-select: none;
   pointer-events: none;
 }
+
+.erda-gantt-task-foreign-render {
+  user-select: none;
+  pointer-events: none;
+  overflow: visible;
+}
+
+.erda-gantt-task-preview-box {
+  border: 2px dashed $color-dark-2;
+}
