fix: fix data format

--- a/shell/app/config-page/components/gantt/components/calendar/calendar.scss
+++ b/shell/app/config-page/components/gantt/components/calendar/calendar.scss
@@ -1,6 +1,7 @@
 .erda-gantt-calendar-bottom-text {
   text-anchor: middle;
-  fill: #333;
+  font-size: 12px;
+  fill: rgba(0, 0, 0, 0.6);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
