--- a/shell/app/config-page/components/gantt/components/grid/grid.scss
+++ b/shell/app/config-page/components/gantt/components/grid/grid.scss
@@ -1,15 +1,15 @@
 .erda-gantt-grid-row {
-  fill: #fff;
+  fill: rgba(0, 0, 0, 0.02);
 }
 
 .erda-gantt-grid-row:nth-child(even) {
-  fill: #f5f5f5;
+  fill: rgba(0, 0, 0, 0.02);
 }
 
 .erda-gantt-grid-row-line {
-  stroke: #ebeff2;
+  stroke: rgba(0, 0, 0, 0.02);
 }
 
 .erda-gantt-grid-tick {
-  stroke: #e6e4e4;
+  stroke: rgba(0, 0, 0, 0.02);
 }
