feat(dop): dop gantt left tree expand and create issue button

--- a/shell/app/config-page/components/gantt/gantt.scss
+++ b/shell/app/config-page/components/gantt/gantt.scss
@@ -5,4 +5,13 @@
   &:hover {
     visibility: visible;
   }
+
+  &-icon {
+    transition: all 0.2s;
+    transform: rotate(-90deg);
+  }
+
+  &-expanded {
+    transform: rotate(0);
+  }
 }
