--- a/shell/app/styles/app.scss
+++ b/shell/app/styles/app.scss
@@ -47,22 +47,17 @@ ol {
   list-style: none;
 }
 
-@font-face {
-  font-family: DINAlternate-Bold;
-  src: url('/static/DIN Alternate Bold.ttf') format('truetype');
-  unicode-range: U+30-39;
-}
-
 html body {
   color: $color-text;
   font-size: 14px;
-  font-family: 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Roboto-Regular', 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue',
+    Arial, sans-serif;
   line-height: 18px;
 }
 
 html body[lang='en'] {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: 'Roboto-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 h1,
