--- a/shell/app/config-page/components/gantt/components/grid/grid.scss
+++ b/shell/app/config-page/components/gantt/components/grid/grid.scss
@@ -1,5 +1,8 @@
 .erda-gantt-grid-row {
   fill: rgba(0, 0, 0, 0.02);
+  &-selected {
+    fill: rgba(0, 0, 0, 0.1) !important;
+  }
 }
 
 .erda-gantt-grid-row:nth-child(even) {
@@ -12,4 +15,8 @@
 
 .erda-gantt-grid-tick {
   stroke: rgba(0, 0, 0, 0.02);
+}
+
+.erda-gantt-grid-changed-range {
+  fill: rgba(244, 181, 24, 0.1);
 }
