--- a/shell/app/config-page/components/gantt/components/grid/grid.scss
+++ b/shell/app/config-page/components/gantt/components/grid/grid.scss
@@ -1,12 +1,16 @@
 .erda-gantt-grid-row {
   fill: transparent;
+  cursor: pointer;
+  &:hover {
+    fill: rgba(0, 0, 0, 0.06);
+  }
   &-selected {
     fill: rgba(0, 0, 0, 0.1) !important;
   }
-}
 
-.erda-gantt-grid-row:nth-child(even) {
-  fill: transparent;
+  &.on-add {
+    cursor: crosshair;
+  }
 }
 
 .erda-gantt-grid-row-line {
@@ -19,4 +23,9 @@
 
 .erda-gantt-grid-changed-range {
   fill: rgba(244, 181, 24, 0.1);
+}
+
+.erda-gantt-grid-add-rect {
+  border: 2px dashed $color-dark-2;
+  cursor: crosshair;
 }
