--- a/shell/app/common/components/erda-alert/index.scss
+++ b/shell/app/common/components/erda-alert/index.scss
@@ -7,15 +7,31 @@
   }
   &.ant-alert-info {
     background-color: $color-default-bg;
+
+    .erda-alert-icon {
+      color: $color-default;
+    }
   }
   &.ant-alert-success {
     background-color: $color-success-bg;
+
+    .erda-alert-icon {
+      color: $color-success;
+    }
   }
   &.ant-alert-warning {
     background-color: $color-warning-bg;
+
+    .erda-alert-icon {
+      color: $color-warning;
+    }
   }
   &.ant-alert-error {
     background-color: $color-error-bg;
+
+    .erda-alert-icon {
+      color: $color-error;
+    }
   }
 
   .ant-alert-message {
