--- a/shell/app/config-page/components/gantt/components/gantt/gantt.scss
+++ b/shell/app/config-page/components/gantt/components/gantt/gantt.scss
@@ -3,7 +3,7 @@
   font-size: 0;
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.02);
+  background-color: $color-dark-02;
 }
 
 .erda-gantt-horizontal-container {
