--- a/shell/app/config-page/components/gantt/components/task-item/task-list.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/task-list.scss
@@ -1,23 +1,15 @@
 .erda-gantt-task-bar-label {
-  fill: #fff;
+  fill: $white;
   text-anchor: middle;
   font-weight: lighter;
   dominant-baseline: central;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   pointer-events: none;
 }
 
 .erda-gantt-task-bar-label-outside {
-  fill: #555;
+  fill: $gray;
   text-anchor: start;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   pointer-events: none;
 }
