--- a/shell/app/views/index.ejs
+++ b/shell/app/views/index.ejs
@@ -62,7 +62,8 @@
   <!-- layout -->
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_1776_8.ba89731a7541ef588c93a4ace53a6b3d.es5.js" ></script>
   <!-- dice iconpark -->
-  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_217.d9ca229e33c4467679964f51b156fbaf.es5.js"></script>
+  <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_138_238.5fe9a23bc7ad3d02c05a03280ec43e7a.es5.js
+"></script>
   <!-- $ -->
 </body>
 
