refactor: make calendar logic clear

--- a/shell/app/config-page/components/gantt/components/calendar/calendar.scss
+++ b/shell/app/config-page/components/gantt/components/calendar/calendar.scss
@@ -31,7 +31,7 @@
   .calendar-normal-text {
     color: $color-dark-6;
   }
-  .calendar-mark-text {
+  .calendar-highlight-text {
     color: $black;
   }
 }
