fix: gantt bar left and right handle not work

--- a/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
@@ -8,6 +8,13 @@
     visibility: hidden;
   }
 
+  .left-handle {
+    cursor: w-resize;
+  }
+  .right-handle {
+    cursor: e-resize;
+  }
+
   &:hover {
     .erda-gantt-bar-handle {
       visibility: visible;
