feat: gantt calendar use transform instead of width to prevent performance issue

--- a/shell/app/config-page/components/gantt/components/calendar/calendar.scss
+++ b/shell/app/config-page/components/gantt/components/calendar/calendar.scss
@@ -21,7 +21,8 @@
   fill: $white;
   stroke: $color-dark-2;
   &-container {
-    top: 8px;
+    position: absolute;
+    padding: 8px 0;
   }
 }
 .erda-gantt-calendar {
