--- a/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
@@ -6,6 +6,9 @@
 .erda-gantt-bar-handle-box {
   .erda-gantt-bar-handle {
     visibility: hidden;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
   }
 
   .left-handle {
