fix: fix bar style

--- a/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
+++ b/shell/app/config-page/components/gantt/components/task-item/bar/bar.scss
@@ -7,8 +7,8 @@
   .erda-gantt-bar-handle {
     visibility: hidden;
     height: 100%;
-    display: inline-block;
-    vertical-align: middle;
+    display: inline-flex;
+    align-items: center;
   }
 
   .left-handle {
