fix: gantt calendar error / add time range error (#2220)
* fix: fix gantt

* fix: fix header tab split type

* fix: fix bar style

* fix: fix preview bar box height

--- a/shell/app/layout/pages/page-container/components/header.scss
+++ b/shell/app/layout/pages/page-container/components/header.scss
@@ -59,6 +59,17 @@
     .tab-menu .tab-menu-item {
       height: 32px;
       line-height: 32px;
+      &.tab-split-line-before {
+        &::before {
+          position: absolute;
+          content: '';
+          width: 1px;
+          height: 12px;
+          left: -20px;
+          top: 10px;
+          background-color: $color-text-desc;
+        }
+      }
     }
   }
 
