--- a/shell/app/styles/util.scss
+++ b/shell/app/styles/util.scss
@@ -349,3 +349,11 @@
     box-shadow: 0 2px 4px 0 $color-card-hover-shadow;
   }
 }
+
+.bg-color-02 {
+  background-color: $color-default-02;
+}
+
+.bg-color-01 {
+  background-color: $color-default-01;
+}
