--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -128,6 +128,12 @@
       border-radius: 2px;
     }
 
+    .ant-picker-range {
+      input {
+        background: none;
+      }
+    }
+
     .icon-search {
       color: $color-text-icon;
     }
